// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`文字排版 快照测试 基本文字排版 1`] = `
<p
  className="sc-bdVaJa fTxEVM sinoui-typography sinoui-typography--body1"
  color="textPrimary"
  type="body1"
>
  Body1
</p>
`;

exports[`文字排版 快照测试 设置属性 1`] = `
Array [
  <h2
    className="sc-bdVaJa fTxEVM sinoui-typography sinoui-typography--body1"
    color="textPrimary"
    type="body1"
  >
    Body1
  </h2>,
  <p
    className="sc-bdVaJa kGItFC sinoui-typography sinoui-typography--body1"
    color="textPrimary"
    type="body1"
  >
    Body1
  </p>,
  <p
    className="sc-bdVaJa hVmHwy sinoui-typography sinoui-typography--body1"
    color="textPrimary"
    type="body1"
  >
    Body1
  </p>,
  <p
    className="sc-bdVaJa knaamv sinoui-typography sinoui-typography--body1"
    color="success"
    type="body1"
  >
    Body1
  </p>,
  <p
    className="sc-bdVaJa fTxEVM sinoui-typography sinoui-typography--body1"
    color="textPrimary"
    type="body1"
  >
    Body1
  </p>,
]
`;

exports[`文字排版 快照测试 颜色设置 1`] = `
Array [
  <p
    className="sc-bdVaJa fTxEVM sinoui-typography sinoui-typography--body1"
    color="textPrimary"
    type="body1"
  >
    Body1
  </p>,
  <p
    className="sc-bdVaJa csRAJR sinoui-typography sinoui-typography--body1"
    color="primary"
    type="body1"
  >
    Body1
  </p>,
  <p
    className="sc-bdVaJa iqHvzr sinoui-typography sinoui-typography--body1"
    color="secondary"
    type="body1"
  >
    Body1
  </p>,
  <p
    className="sc-bdVaJa fTxEVM sinoui-typography sinoui-typography--body1"
    color="textPrimary"
    type="body1"
  >
    Body1
  </p>,
  <p
    className="sc-bdVaJa fIbVFw sinoui-typography sinoui-typography--body1"
    color="textSecondary"
    type="body1"
  >
    Body1
  </p>,
  <p
    className="sc-bdVaJa fDkJjk sinoui-typography sinoui-typography--body1"
    color="error"
    type="body1"
  >
    Body1
  </p>,
  <p
    className="sc-bdVaJa ljPuLk sinoui-typography sinoui-typography--body1"
    color="warning"
    type="body1"
  >
    Body1
  </p>,
  <p
    className="sc-bdVaJa knaamv sinoui-typography sinoui-typography--body1"
    color="success"
    type="body1"
  >
    Body1
  </p>,
  <p
    className="sc-bdVaJa kJrrqa sinoui-typography sinoui-typography--body1"
    color="info"
    type="body1"
  >
    Body1
  </p>,
]
`;
